--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,5 +1,5 @@
 site:
-  name: AstroWind
+  name: Socionomics
   site: 'https://astrowind.vercel.app'
   base: '/'
   trailingSlash: false
@@ -9,14 +9,14 @@ site:
 # Default SEO metadata
 metadata:
   title:
-    default: AstroWind
-    template: '%s — AstroWind'
-  description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
+    default: Socionomics
+    template: '%s — Socionomics'
+  description: "\U0001F680 Politics, Politik, Society, Gesellschaft, Economics, Ökonomie, Switzerland, Schweiz, Europe, Europa, International, "
   robots:
     index: true
     follow: true
   openGraph:
-    site_name: AstroWind
+    site_name: Socionomics
     images:
       - url: '~/assets/images/default.png'
         width: 1200
